<resources>
    <string name="app_name">FirebaseAuth</string>
    <string name="phone_number">Ваш номер телефона</string>
    <string name="next">Далее</string>
    <string name="phone_hint">+7</string>
    <string name="sms_code">Код из смс</string>
    <string name="wrong_code">Неверный код</string>
    <string name="wrong_phone">Неверный номер</string>
    <string name="registration">Регистрация</string>
    <string name="input_phone">Введите номер телефона</string>
    <string name="input_code">Введите код</string>

    <string name="fio">Фамилия Имя Отчество</string>
    <string name="birth_date">Дата рождения</string>
    <string name="gender">Пол</string>
    <string name="email">E-mail</string>
    <string name="register">Зарегистрироваться</string>
    <string name="input_all_fields">Заполните все поля</string>
    <string name="birth_date_format">Дата рождения: %s</string>
    <string name="gender_format">Пол: %s</string>
    <string name="email_format">E-mail: %s</string>

    <string-array name="genders">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>
</resources>